--- a/plugin.xml
+++ b/plugin.xml
@@ -86,11 +86,16 @@
       </feature>
     </config-file>
 
-    <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <activity android:name="com.foo.Foo" android:label="@string/app_name">
-        <intent-filter>
-        </intent-filter>
-      </activity>
+    <config-file target="AndroidManifest.xml" parent="/manifest/application/activity[@android:name='MainActivity']">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data
+                android:scheme="https"
+                android:host="dev.internetlab.ru"
+                android:pathPattern="/deeplink/index.html" />
+      </intent-filter>
     </config-file>
 
 <!-- Java Library Sources -->
