--- a/plugin.xml
+++ b/plugin.xml
@@ -38,13 +38,13 @@
       </feature>
     </config-file>
 	
-	<config-file target="*/Entitlements-Debug.plist" parent="com.apple.developer.associated-domains">
+	<config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
 		<array>
 			<string>applinks:test3.migcredit.ru</string>
 		</array>
 	</config-file>
 
-	<config-file target="*/Entitlements-Release.plist" parent="com.apple.developer.associated-domains">
+	<config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
 		<array>
 			<string>applinks:test3.migcredit.ru</string>
 		</array>
