--- a/plugin.xml
+++ b/plugin.xml
@@ -60,6 +60,54 @@
 			<string>applinks:test3.migcredit.ru</string>
 		</array>
 	</edit-config>
+	
+	<config-file target="Entitlements.plist" parent="/*">
+		<dict>
+			<key>com.apple.developer.associated-domains</key>
+			<array>
+				<string>activitycontinuation:extrasolar.com</string>
+				<string>applinks:extrasolar.com</string>
+			</array>
+		</dict>
+	</config-file>
+		<config-file platform="ios" parent="com.apple.developer.associated-domains" mode="replace">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</config-file>
+		<edit-config target="com.apple.developer.associated-domains" file="*-Info.plist" mode="overwrite">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</edit-config>
+		
+		<config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</config-file>
+		<config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
+		  <array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</config-file>
+		<config-file platform="ios" target="Entitlements-*.plist" parent="com.apple.developer.associated-domains" mode="replace">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</config-file>
+		
+		
+		<config-file platform="ios" target="embedded.mobileprovision" parent="com.apple.developer.associated-domains" mode="replace">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</config-file>
+		<edit-config target="com.apple.developer.associated-domains" file="embedded.mobileprovision" mode="overwrite">
+			<array>
+				<string>applinks:test3.migcredit.ru</string>
+			</array>
+		</edit-config>
 
 <!-- Objective-C Sources -->
 
