--- a/plugin.xml
+++ b/plugin.xml
@@ -49,6 +49,11 @@
 			<string>applinks:test3.migcredit.ru</string>
 		</array>
 	</config-file>
+	<edit-config target="com.apple.developer.associated-domains" file="*-Release.plist" mode="overwrite">
+		<array>
+			<string>applinks:test3.migcredit.ru</string>
+		</array>
+	</edit-config>
 
 	<config-file platform="ios" target="embedded.mobileprovision" parent="com.apple.developer.associated-domains" mode="replace">
 		<array>
