--- a/plugin.xml
+++ b/plugin.xml
@@ -32,10 +32,10 @@
 
 	<!-- Plugin inclusion in Cordova config.xml  -->
     <config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
-      <string>applinks:test3.migcredit.ru</string>
+      <array><string>applinks:test3.migcredit.ru</string></array>
     </config-file>
     <config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
-      <string>applinks:test3.migcredit.ru</string>
+      <array><string>applinks:test3.migcredit.ru</string></array>
     </config-file>
 
 <!-- Objective-C Sources -->
