--- a/plugin.xml
+++ b/plugin.xml
@@ -37,6 +37,24 @@
     <config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
       <array><string>applinks:test3.migcredit.ru</string></array>
     </config-file>
+    <config-file target="Entitlements-Debug.plist" parent="com.apple.developer.associated-domains">
+      <array><string>applinks:test3.migcredit.ru</string></array>
+    </config-file>
+    <config-file target="Entitlements-Release.plist" parent="com.apple.developer.associated-domains">
+      <array><string>applinks:test3.migcredit.ru</string></array>
+    </config-file>
+	
+<config-file target="*/Entitlements-Debug.plist" parent="com.apple.developer.associated-domains">
+      <array>
+        <string>applinks:test3.migcredit.ru</string>
+      </array>
+</config-file>
+
+<config-file target="*/Entitlements-Release.plist" parent="com.apple.developer.associated-domains">
+      <array>
+        <string>applinks:test3.migcredit.ru</string>
+      </array>
+</config-file>
 
 <!-- Objective-C Sources -->
 
