--- a/plugin.xml
+++ b/plugin.xml
@@ -29,23 +29,12 @@
 
   <platform name="ios">
     <hook src="hooks/iosBeforePrepareHook.js" type="before_prepare" />
-		
-<gap:config-file platform="ios" parent="com.apple.developer.associated-domains" mode="replace">
-	<array>
-		<string>applinks:test3.migcredit.ru</string>
-	</array>
-</gap:config-file>
-<config-file target="*-Debug.plist" parent="com.apple.developer.associated-domains">
-  <string>applinks:test3.migcredit.ru</string>
-</config-file>
-<config-file target="*-Release.plist" parent="com.apple.developer.associated-domains">
-  <string>applinks:test3.migcredit.ru</string>
-</config-file>
-<config-file platform="ios" target="Entitlements-*.plist" parent="com.apple.developer.associated-domains" mode="replace">
-	<array>  
-		<string>applinks:test3.migcredit.ru</string>
-	</array>
-</config-file>
+	
+	<config-file parent="com.apple.developer.associated-domains" target="app.entitlements">
+		<array>
+			<string>applinks:test3.migcredit.ru</string>
+		</array>
+	</config-file>
 
 <!-- Objective-C Sources -->
 
