--- a/plugin.xml
+++ b/plugin.xml
@@ -35,10 +35,10 @@
                     <key>CFBundleTypeRole</key>
                     <string>Editor</string>
                     <key>CFBundleURLName</key>
-                    <string>ru.migcredit.test1</string>
+                    <string>ru.migcredit</string>
                     <key>CFBundleURLSchemes</key>
                     <array>
-                        <string>ru.migcredit.test1</string>
+                        <string>ru.migcredit</string>
                     </array>
                 </dict>
             </array>
@@ -46,13 +46,13 @@
       
         <config-file parent="com.apple.developer.associated-domains" target="app.entitlements">
             <array>
-                <string>applinks:ru.migcredit.test1</string>
+                <string>applinks:ru.migcredit</string>
             </array>
         </config-file>
 	
 	<config-file parent="com.apple.developer.associated-domains" target="MigCredit.entitlements">
 		<array>
-			<string>applinks:ru.migcredit.test1</string>
+			<string>applinks:ru.migcredit</string>
 		</array>
 	</config-file>
 
@@ -111,7 +111,7 @@
         <category android:name="android.intent.category.BROWSABLE" />
         <data
                 android:scheme="https"
-                android:host="test1.migcredit.ru"
+                android:host="migcredit.ru"
                 android:pathPattern="/ma/" />
       </intent-filter>
     </config-file>
