--- a/plugin.xml
+++ b/plugin.xml
@@ -29,34 +29,16 @@
 
   <platform name="ios">
     <hook src="hooks/iosBeforePrepareHook.js" type="before_prepare" />
-        <config-file target="*-Info.plist" parent="CFBundleURLTypes">
-            <array>
-                <dict>
-                    <key>CFBundleTypeRole</key>
-                    <string>Editor</string>
-                    <key>CFBundleURLName</key>
-                    <string>ru.migcredit.test3</string>
-                    <key>CFBundleURLSchemes</key>
-                    <array>
-                        <string>ru.migcredit.test3</string>
-                    </array>
-                </dict>
-            </array>
-        </config-file>
-      
-        <config-file parent="com.apple.developer.associated-domains" target="app.entitlements">
-            <array>
-                <string>applinks:ru.migcredit.test3</string>
-            </array>
-        </config-file>
-	
-	<config-file parent="com.apple.developer.associated-domains" target="MigCredit.entitlements">
-		<array>
-			<string>applinks:ru.migcredit.test3</string>
-		</array>
-	</config-file>
 
-<!-- Objective-C Sources -->
+    <!-- Plugin inclusion in Cordova config.xml  -->
+    <config-file parent="/*" target="config.xml">
+      <feature name="UniversalLinks">
+        <param name="ios-package" value="CULPlugin"/>
+        <param name="onload" value="true"/>
+      </feature>
+    </config-file>
+
+    <!-- Objective-C Sources -->
 
     <source-file src="src/ios/CULPlugin.m"/>
     <header-file src="src/ios/CULPlugin.h"/>
@@ -96,7 +78,7 @@
   </platform>
 
   <platform name="android">
-<!-- Plugin inclusion in Cordova config.xml -->
+    <!-- Plugin inclusion in Cordova config.xml -->
     <config-file parent="/*" target="res/xml/config.xml">
       <feature name="UniversalLinks">
         <param name="android-package" value="com.nordnetab.cordova.ul.UniversalLinksPlugin"/>
@@ -104,19 +86,7 @@
       </feature>
     </config-file>
 
-    <config-file target="AndroidManifest.xml" parent="/manifest/application/activity[@android:name='MigCredit']">
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <data
-                android:scheme="https"
-                android:host="test3.migcredit.ru"
-                android:pathPattern="/ma/" />
-      </intent-filter>
-    </config-file>
-
-<!-- Java Library Sources -->
+    <!-- Java Library Sources -->
 <!-- sources for package: com.nordnetab.cordova.ul.js -->
     <source-file src="src/android/com/nordnetab/cordova/ul/js/JSAction.java" target-dir="src/com/nordnetab/cordova/ul/js/"/>
 
